# peach-8

./: Cargo.toml  LICENSE  README.md  openocd.gdb
.cargo/: config
chip/: Cargo.toml
chip/src/: context.rs  main.rs
peach8/: Cargo.toml
peach8/src/: builder.rs  context.rs  frame.rs  gfx.rs  lib.rs  logger.rs  opcode.rs  peach.rs  timer.rs  utils.rs
peach8/test-data/context/: full_mask
peach8/test-data/corax89_chip8-test-rom/: expected_result
peach8/test-data/skosulor_c8int/: test.c8
peach8/tests/: test_roms.rs
peripherals/: Cargo.toml
peripherals/src/: keeb.rs  lib.rs  logger.rs  ppu.rs  spu.rs
src/: bin.rs  lib.rs  logger.rs
