[package]
name = "chip"
version = "0.1.0"
authors = ["Zwo1in <zwolin13@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.3"
embedded-graphics = "0.6.2"
peripherals = { path = "../peripherals" }
panic-itm = "0.4.0"
ssd1306 = "0.4.0"
log = "0.4.11"

[dependencies.peach8]
path = "../peach8"
version = "*"

[dependencies.cortex-m-log]
features = ["itm", "semihosting", "log-integration"]
version = "0.6.2"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc"]
version = "0.5.0"
