[package]
name = "peach8"
version = "0.1.0"
authors = ["Zwo1in <zwolin13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5.6"
bitvec = "0.19.3"
log = "0.4.11"

[dev-dependencies.nanorand]
version = "0.4.4"
features = ["pcg64"]
default-features = false
