[package]
name = "peach8"
version = "0.1.0"
authors = ["Zwo1in <zwolin13@gmail.com>"]
edition = "2018"

[features]
default = ["atomic", "embedded-graphics"]
atomic = []

[dependencies]
embedded-graphics = { version = "0.6.2", optional = true }
heapless = "0.5.6"
nb = "1.0.0"
log = "0.4.11"

[dependencies.bitvec]
version = "0.19.3"
default-features = false

[dev-dependencies]
rand = "0.7"
env_logger = "0.8"
crossbeam-utils = "0.8"

[dev-dependencies.nanorand]
version = "0.4.4"
features = ["pcg64"]
default-features = false

